fix dual scrollbar issue on locationlist after adding search

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -215,7 +215,7 @@ header p {
 #location-list {
     overflow-y: auto;
     overflow-x: visible;
-    max-height: calc(98vh - 200px);
+    max-height: calc(94vh - 200px);
 }
 
 /* Location sections */
